--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
       - ./data/db:/var/lib/postgresql/data
 
   odoo:
-    image: odoo:14.0
+    build: .
+    image: odoo14-custom
     depends_on:
       db:
         condition: service_healthy
@@ -27,3 +28,4 @@ services:
       - ./odoo/entrypoint/odoo-entrypoint.sh:/usr/local/bin/odoo-entrypoint.sh:ro
       - ./odoo/config:/etc/odoo
       - ./odoo/addons:/mnt/extra-addons
+      - ./data/odoo:/var/lib/odoo/.local/share/Odoo
